--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-09/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://merdansahin.github.io/goit-js-hw-09/",
   "devDependencies": {
     "css-loader": "^7.1.2",
     "glob": "^11.0.0",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
     "style-loader": "^4.0.0",
-    "vite": "^5.4.21"
+    "vite": "^5.4.21",
+    "gh-pages": "^6.3.0"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Merdan Sahin",
   "license": "ISC",
   "dependencies": {
     "simplelightbox": "^2.14.3",
